[gd_scene load_steps=31 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Art/MenuButton.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Comic48.tres" type="DynamicFont" id=3]
[ext_resource path="res://Art/Logo 128x128.png" type="Texture" id=4]
[ext_resource path="res://Art/TitleLogo.png" type="Texture" id=5]
[ext_resource path="res://Art/felos.png" type="Texture" id=6]
[ext_resource path="res://Fonts/Comic90.tres" type="DynamicFont" id=7]
[ext_resource path="res://Art/Paper.png" type="Texture" id=8]
[ext_resource path="res://Art/pin_red.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Comic20.tres" type="DynamicFont" id=10]
[ext_resource path="res://Fonts/Comic32.tres" type="DynamicFont" id=11]
[ext_resource path="res://Art/Weapons/Sword.png" type="Texture" id=12]
[ext_resource path="res://Fonts/Comic120.tres" type="DynamicFont" id=13]
[ext_resource path="res://Art/PlaceHolderFood.png" type="Texture" id=14]
[ext_resource path="res://Art/Weapons/Hammer.png" type="Texture" id=15]
[ext_resource path="res://Art/Weapons/Keyboard.png" type="Texture" id=16]
[ext_resource path="res://Art/United_States_of_America.png" type="Texture" id=17]
[ext_resource path="res://Art/SugarsBuy1.png" type="Texture" id=18]
[ext_resource path="res://Art/paper_2.png" type="Texture" id=19]
[ext_resource path="res://Art/Junk/Burger.png" type="Texture" id=20]
[ext_resource path="res://Art/Junk/Hotdog.png" type="Texture" id=21]
[ext_resource path="res://Art/Healhty/Cabbage.png" type="Texture" id=22]
[ext_resource path="res://Art/Healhty/Tomato.png" type="Texture" id=23]
[ext_resource path="res://Art/Cutting Board.png" type="Texture" id=24]
[ext_resource path="res://Art/MenuBG.png" type="Texture" id=25]
[ext_resource path="res://Art/sugar.png" type="Texture" id=26]

[sub_resource type="StyleBoxFlat" id=1]

bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]

bg_color = Color( 0, 0, 0, 0 )
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFontData" id=3]

font_path = "res://Fonts/ComicRelief.ttf"

[sub_resource type="DynamicFont" id=4]

size = 38
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Main" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Buttons" type="Control" parent="Main"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Start" type="Button" parent="Main/Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -340.0
margin_right = 225.0
margin_bottom = -254.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ico" type="Sprite" parent="Main/Buttons/Start"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Play" type="Label" parent="Main/Buttons/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Start"
align = 1
valign = 1

[node name="Shop" type="Button" parent="Main/Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -190.0
margin_right = 225.0
margin_bottom = -97.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true

[node name="ico" type="Sprite" parent="Main/Buttons/Shop"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Shop" type="Label" parent="Main/Buttons/Shop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -13.0
custom_fonts/font = ExtResource( 3 )
text = "Shop"
align = 1
valign = 1

[node name="Options" type="Button" parent="Main/Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -40.0
margin_right = 225.0
margin_bottom = 53.0
flat = true

[node name="ico" type="Sprite" parent="Main/Buttons/Options"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Options" type="Label" parent="Main/Buttons/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -46.5
margin_right = 225.0
margin_bottom = 46.5
custom_fonts/font = ExtResource( 3 )
text = "Options"
align = 1
valign = 1

[node name="Leaderboard" type="Button" parent="Main/Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = 110.0
margin_right = 225.0
margin_bottom = 203.0
flat = true

[node name="ico" type="Sprite" parent="Main/Buttons/Leaderboard"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Leaderboard" type="Label" parent="Main/Buttons/Leaderboard"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = -46.5
margin_right = 225.0
margin_bottom = 46.5
custom_fonts/font = ExtResource( 3 )
text = "Leaderboard"
align = 1
valign = 1

[node name="Help" type="Button" parent="Main/Buttons"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = 260.0
margin_right = 225.0
margin_bottom = 350.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ico" type="Sprite" parent="Main/Buttons/Help"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Help" type="Label" parent="Main/Buttons/Help"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Help"
align = 1
valign = 1

[node name="About" type="Button" parent="Main/Buttons"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -150.0
margin_right = -20.0
margin_bottom = -16.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="GameLogo" type="TextureRect" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_top = 150.0
margin_right = 285.0
margin_bottom = 320.0
texture = ExtResource( 5 )

[node name="HighScoreBG" type="Sprite" parent="Main"]
position = Vector2( 109, 1208 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="HighScore" type="Label" parent="Main/HighScoreBG"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -290.5
margin_right = -360.0
margin_bottom = -189.5
custom_fonts/font = ExtResource( 7 )
text = "Hiscore"
align = 1
valign = 1

[node name="Options" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WoodenBG" type="Sprite" parent="Options"]
position = Vector2( 360, 640 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 6 )

[node name="Paper" type="Sprite" parent="Options/WoodenBG"]
scale = Vector2( 0.8, 0.714286 )
texture = ExtResource( 8 )

[node name="Red_pin2" type="Sprite" parent="Options/WoodenBG"]
position = Vector2( 330, -200 )
rotation = -3.14159
scale = Vector2( 0.2, -0.285714 )
texture = ExtResource( 9 )

[node name="Red_pin" type="Sprite" parent="Options/WoodenBG"]
position = Vector2( -330, -214.286 )
scale = Vector2( 0.2, 0.285714 )
texture = ExtResource( 9 )

[node name="BuyCurrency" type="Button" parent="Options/WoodenBG"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -155.0
margin_right = 180.0
margin_bottom = -65.0
custom_fonts/font = ExtResource( 10 )
text = "Buy Currency"
flat = true

[node name="BuyMoney" type="Button" parent="Options/WoodenBG"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 180.0
margin_top = -155.0
margin_right = 360.0
margin_bottom = -65.0
custom_fonts/font = ExtResource( 10 )
text = "Buy Money"
flat = true

[node name="Description" type="Label" parent="Options/WoodenBG"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -720.0
margin_top = -312.0
margin_right = -360.0
margin_bottom = -191.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "A nice guy makes a sandiwt. This is a description. i love you mnan. plz code for me more. lalalalalalalalalalalalalala"
align = 1
autowrap = true

[node name="Buff" type="Label" parent="Options/WoodenBG"]
visible = false
margin_top = -215.0
margin_right = 350.0
margin_bottom = -115.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 1, 0.368627, 1 )
text = "+10 points per hit"
align = 1
autowrap = true

[node name="Equip_Info" type="Button" parent="Options/WoodenBG"]
editor/display_folded = true
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -720.0
margin_top = -155.0
margin_right = -360.0
margin_bottom = -65.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="EquipLabel" type="Label" parent="Options/WoodenBG/Equip_Info"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="AudioOnOff" type="Button" parent="Options"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = 310.0
margin_right = 225.0
margin_bottom = 390.0
rect_min_size = Vector2( 400, 80 )
flat = true

[node name="ico" type="Sprite" parent="Options/AudioOnOff"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="OnOff" type="Label" parent="Options/AudioOnOff"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Audio"
align = 1
valign = 1

[node name="Back_Options" type="Button" parent="Options"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.0
margin_top = 460.0
margin_right = 225.0
margin_bottom = 540.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ico" type="Sprite" parent="Options/Back_Options"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Back" type="Label" parent="Options/Back_Options"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 1
valign = 1

[node name="Selected" type="Sprite" parent="Options"]
visible = false
position = Vector2( 160, 700 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 12 )

[node name="Locked" type="Label" parent="Options/Selected"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -483.5
margin_right = -400.0
margin_bottom = -316.5
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Locked"
align = 1
valign = 1

[node name="WeaponGridContainer" type="ScrollContainer" parent="Options"]
editor/display_folded = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -266.0
margin_top = 127.0
margin_right = 263.0
margin_bottom = 447.0
rect_min_size = Vector2( 50, 320 )
scroll_horizontal_enabled = false

[node name="WeaponGrid" type="GridContainer" parent="Options/WeaponGridContainer"]
editor/display_folded = true
custom_constants/vseparation = 200
custom_constants/hseparation = 180
columns = 3

[node name="Skin_Buttons_1" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_right = 12.0

[node name="Skin_1" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_1"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_2" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 192.0
margin_right = 192.0

[node name="Skin_2" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_2"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 12 )

[node name="Skin_Buttons_3" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 372.0
margin_right = 372.0

[node name="Skin_3" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_3"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 15 )

[node name="Skin_Buttons_4" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_top = 200.0
margin_right = 12.0
margin_bottom = 200.0

[node name="Skin_4" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_4"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 16 )

[node name="Skin_Buttons_5" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 192.0
margin_top = 200.0
margin_right = 192.0
margin_bottom = 200.0

[node name="Skin_5" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_5"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_6" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 372.0
margin_top = 200.0
margin_right = 372.0
margin_bottom = 200.0

[node name="Skin_6" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_6"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_7" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_top = 400.0
margin_right = 12.0
margin_bottom = 400.0

[node name="Skin_7" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_7"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_8" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 192.0
margin_top = 400.0
margin_right = 192.0
margin_bottom = 400.0

[node name="Skin_8" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_8"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_9" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 372.0
margin_top = 400.0
margin_right = 372.0
margin_bottom = 400.0

[node name="Skin_9" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_9"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_10" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_top = 600.0
margin_right = 12.0
margin_bottom = 600.0

[node name="Skin_10" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_10"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_11" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 192.0
margin_top = 600.0
margin_right = 192.0
margin_bottom = 600.0

[node name="Skin_11" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_11"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="Skin_Buttons_12" type="Control" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_left = 372.0
margin_top = 600.0
margin_right = 372.0
margin_bottom = 600.0

[node name="Skin_12" type="Button" parent="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_12"]
rect_scale = Vector2( 0.15, 0.15 )
icon = ExtResource( 14 )

[node name="VScrollBar" type="VScrollBar" parent="Options/WeaponGridContainer/WeaponGrid"]
margin_top = 800.0
margin_right = 12.0
margin_bottom = 812.0

[node name="Language" type="Button" parent="Options"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -65.0
margin_right = 198.0
flat = true

[node name="ico" type="Sprite" parent="Options/Language"]
scale = Vector2( 0.6, 0.8 )
texture = ExtResource( 2 )
centered = false

[node name="Language" type="Sprite" parent="Options/Language"]
position = Vector2( 93.0748, 34.3491 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 17 )

[node name="Shop" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BuySugar1" type="Button" parent="Shop"]
margin_left = 100.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 500.0

[node name="Sugar" type="Sprite" parent="Shop/BuySugar1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 18 )
centered = false

[node name="Amount" type="Label" parent="Shop/BuySugar1"]
anchor_right = 1.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 11 )
text = "1000 Sugar"
align = 1
valign = 1

[node name="Cost" type="Label" parent="Shop/BuySugar1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -46.0
custom_fonts/font = ExtResource( 11 )
text = "100 Eura"
align = 1
valign = 1

[node name="BackShop" type="Button" parent="Shop"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -130.0
margin_right = 225.0
margin_bottom = -49.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Ico" type="Sprite" parent="Shop/BackShop"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Back" type="Label" parent="Shop/BackShop"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 1
valign = 1

[node name="Help" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackInst" type="Button" parent="Help"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -180.0
margin_right = 225.0
margin_bottom = -87.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="ico" type="Sprite" parent="Help/BackInst"]
scale = Vector2( 1.5, 1 )
texture = ExtResource( 2 )
centered = false

[node name="Back" type="Label" parent="Help/BackInst"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 1
valign = 1

[node name="Background" type="Sprite" parent="Help"]
editor/display_folded = true
position = Vector2( 360, 550.5 )
rotation = 1.5708
texture = ExtResource( 19 )

[node name="HowTo" type="Label" parent="Help/Background"]
anchor_right = 1.0
margin_left = -491.0
margin_top = 330.0
margin_right = -829.0
margin_bottom = 376.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 11 )
text = "How to Play!"
align = 1
valign = 1

[node name="Goal" type="Label" parent="Help/Background"]
margin_left = -430.0
margin_top = 330.0
margin_right = 230.0
margin_bottom = 480.0
rect_rotation = -90.0
custom_fonts/font = ExtResource( 10 )
custom_colors/font_color = Color( 0.454902, 1, 0, 1 )
text = "Your goal is to CONSUME junk foods while trying to AVOID healthy eating. Press EAT to eat or HIT to send off the current meal."
align = 1
autowrap = true

[node name="Fotos" type="Control" parent="Help"]
margin_top = 460.0
margin_right = 40.0
margin_bottom = 500.0

[node name="Junk1" type="Sprite" parent="Help/Fotos"]
position = Vector2( 120, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 20 )

[node name="Junk2" type="Sprite" parent="Help/Fotos"]
position = Vector2( 280, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 21 )

[node name="Health1" type="Sprite" parent="Help/Fotos"]
position = Vector2( 440, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 22 )

[node name="Health2" type="Sprite" parent="Help/Fotos"]
position = Vector2( 600, 0 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 23 )

[node name="EAT" type="Label" parent="Help/Fotos"]
margin_left = 20.0
margin_top = -170.0
margin_right = 360.0
margin_bottom = -69.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.392157, 1, 1 )
text = "EAT!!!"
align = 1
valign = 1

[node name="HIT" type="Label" parent="Help/Fotos"]
margin_left = 360.0
margin_top = -170.0
margin_right = 700.0
margin_bottom = -69.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "HIT!!!"
align = 1
valign = 1

[node name="Time" type="Control" parent="Help"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="TimeHelp" type="Label" parent="Help/Time"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -315.0
margin_top = -100.0
margin_right = 1.0
margin_bottom = -72.0
custom_fonts/font = ExtResource( 10 )
text = "what is the bar and the time doing"
align = 1
valign = 1

[node name="Time" type="Label" parent="Help/Time"]
margin_left = 160.0
margin_top = -50.0
margin_right = 360.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 7 )
text = "2"
align = 1
valign = 1

[node name="Timebar" type="ProgressBar" parent="Help/Time"]
margin_left = -300.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 0.001
percent_visible = false

[node name="Mult" type="Control" parent="Help"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = 60.0
margin_right = -320.0
margin_bottom = 100.0

[node name="X" type="Sprite" parent="Help/Mult"]
position = Vector2( 360, 150 )

[node name="Multiplier" type="Label" parent="Help/Mult/X"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -101.0
margin_right = 52.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 7 )
text = "x2"

[node name="Multy" type="Label" parent="Help/Mult"]
margin_left = 25.0
margin_right = 695.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 10 )
text = "What is multplier"
align = 1
valign = 1

[node name="Rot" type="Timer" parent="Help/Mult"]

[node name="About" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="About"]
margin_left = 717.0
margin_top = 1180.0
margin_right = 1437.0
margin_bottom = 2509.0
rect_rotation = 180.0
rect_scale = Vector2( 1, 0.9 )
texture = ExtResource( 24 )

[node name="Buttons" type="Control" parent="About"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Back_About" type="Button" parent="About/Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Back" type="Label" parent="About/Buttons/Back_About"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="AboutUs" type="Label" parent="About"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -560.0
margin_right = 506.0
margin_bottom = 369.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.478431, 1, 0, 1 )
text = "Nerf Us Entertainment

The team:

Programmers: Angelo Giannoudakis, Dionisis Rigopoulos, Thanasis Papoutsidakis

Artists: Maria Nikolelli

Audio: Spyros Glarakis

Assets used from:
https://www.freepik.com
Logos used from:
https://linkus.flamingtext.com/"
align = 1
valign = 1
autowrap = true

[node name="MenuBG" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 25 )
expand = true

[node name="Currency" type="Control" parent="."]
editor/display_folded = true
margin_top = -10.0
margin_right = 40.0
margin_bottom = 30.0

[node name="Sugar1" type="Sprite" parent="Currency"]
position = Vector2( 20, 40 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 26 )
centered = false

[node name="Sugar2" type="Sprite" parent="Currency"]
position = Vector2( 90, 50 )
rotation = -0.349066
scale = Vector2( 0.32, 0.32 )
texture = ExtResource( 26 )

[node name="Sugar3" type="Sprite" parent="Currency"]
position = Vector2( 110, 90 )
rotation = -2.35619
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 26 )

[node name="Sugar" type="Label" parent="Currency"]
margin_left = 150.0
margin_top = 57.0
margin_right = 752.0
margin_bottom = 124.0
custom_fonts/font = ExtResource( 3 )
text = "10000000000000"
valign = 1

[connection signal="pressed" from="Main/Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main/Buttons/Shop" to="." method="_on_Shop_pressed"]
[connection signal="pressed" from="Main/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Main/Buttons/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="Main/Buttons/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="Options/WoodenBG/BuyCurrency" to="." method="_on_BuyCurrency_pressed"]
[connection signal="pressed" from="Options/WoodenBG/BuyMoney" to="." method="_on_BuyMoney_pressed"]
[connection signal="pressed" from="Options/WoodenBG/Equip_Info" to="." method="_on_Equip_Info_pressed"]
[connection signal="pressed" from="Options/AudioOnOff" to="." method="_on_AudioOnOff_pressed"]
[connection signal="pressed" from="Options/Back_Options" to="." method="_on_Back_Options_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_1/Skin_1" to="." method="_on_Skin_1_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_2/Skin_2" to="." method="_on_Skin_2_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_3/Skin_3" to="." method="_on_Skin_3_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_4/Skin_4" to="." method="_on_Skin_4_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_5/Skin_5" to="." method="_on_Skin_5_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_6/Skin_6" to="." method="_on_Skin_6_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_7/Skin_7" to="." method="_on_Skin_7_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_8/Skin_8" to="." method="_on_Skin_8_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_9/Skin_9" to="." method="_on_Skin_9_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_10/Skin_10" to="." method="_on_Skin_10_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_11/Skin_11" to="." method="_on_Skin_11_pressed"]
[connection signal="pressed" from="Options/WeaponGridContainer/WeaponGrid/Skin_Buttons_12/Skin_12" to="." method="_on_Skin_12_pressed"]
[connection signal="pressed" from="Options/Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="Shop/BackShop" to="." method="_on_BackShop_pressed"]
[connection signal="pressed" from="Help/BackInst" to="." method="_on_BackInst_pressed"]
[connection signal="timeout" from="Help/Mult/Rot" to="." method="_on_Rot_timeout"]
[connection signal="pressed" from="About/Buttons/Back_About" to="." method="_on_Back_About_pressed"]
